Creating db context

--- a/HotelListingAPI/appsettings.json
+++ b/HotelListingAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=HotelListAPIDb;Trusted_Connection=True;MultipleActiveResultsSets=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
